--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -60,6 +60,6 @@
     </small>
     <small>
       Published with <a href="https://jekyllrb.com/">Jekyll</a>
-      using <a href="https://github.com/samanyougarg/hanuman">Hanuman</a>
+      using <a href="https://github.com/samanyougarg/robert">robert</a>
     </small>
 </footer>
