--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -562,7 +562,7 @@ html{font-family:sans-serif;line-height:1.15;-ms-text-size-adjust:100%;-webkit-t
   #radhakrishna {
     display: inline-flex;
   }
-  .hanumanchalisa {
+  .robertchalisa {
     margin-bottom: 5rem;
   }
 
@@ -689,7 +689,7 @@ blockquote {
     margin-top: 2rem;
 }
 
-.hanuman {
+.robert {
     margin-top: 25vh;
     text-align: center;
     font-weight: 600;
