--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
     <amp-img height="720" alt="{{ page.title }}" layout="fixed-height" src="{{ site.baseurl }}{{ page.cover }}" media="(min-width: 416px)"></amp-img>
     <figcaption class="absolute top-0 right-0 bottom-0 left-0">
       <header class="p3">
-        <h1 class="ampstart-fullpage-hero-heading mb0 hanuman">
+        <h1 class="ampstart-fullpage-hero-heading mb0 robert">
           <span class="ampstart-fullpage-hero-heading-text title">
             {{ page.title }}
           </span>
