--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,11 +8,18 @@
       </a>
       <nav class="header__links">
         <div class="container header__links-wrapper">
-          <a class="header__link" href="{{ '/' | relative_url }}" itemprop="url"><span itemprop="name">Home</span></a>
+          <a class="header__link" href="{{ '/' | relative_url }}" itemprop="url"><span itemprop="name">Blog</span></a>
           <a class="header__link" href="{{ '/about' | relative_url }}" itemprop="url"><span itemprop="name">About</span></a>
+          <a class="header__link" href="{{ '/destinations' | relative_url }}" itemprop="url">
+            <span itemprop="name">Destinations</span>
+          </a>
+          <a class="header__link" href="{{ '/photography' | relative_url }}" itemprop="url">
+            <span itemprop="name">Photography</span>
+          </a>
           <a class="header__link" href="{{ '/contact' | relative_url }}" itemprop="url">
             <span itemprop="name">Contact</span>
           </a>
+          
         </div>
       </nav>
       <div class="header__toggle">
