--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@ layout: compress
     <div class="hero lazyload" data-bg="{{site.url}}/assets/img/posts/sleek_lg.jpg">
       <div class="hero__wrap">
         <h1 class="hero__title">Love ❤️ Travel ✈️ Money 💰</h1>
-        <p class="hero__meta">Courtney & Rob Adventure couple traveling the world while trying to make a living at the same time. 👩🏻‍💻@courtneymakesvideo 👨🏻‍💻@robert_james_gabriel #♥️✈️💵</p>
+        <p class="hero__meta">Courtney & Rob Adventure couple traveling the world while trying to make a living at the same time</p>
       </div>
     </div>
 
