--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     <div class="header__inner">
       <a class="header__logo" href="{{ '/' | relative_url }}">
         <div class="header__logo--container">
-          {% include logo.svg %}
+          Love ❤️ Travel ✈️ Money 💰
         </div>
       </a>
       <nav class="header__links">
