--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -46,8 +46,9 @@
   }
 
   .header__logo--container {
-    width: 58px;
-
+    
+    width: 102px;
+    font-size: 1.5rem;
     .logo {
       fill: currentColor;
     }
