--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,10 +18,10 @@ layout: compress
 
     {% include header.html %}
 
-    <div class="hero lazyload" data-bg="{{site.url}}/assets/img/posts/sleek_lg.jpg">
+    <div class="hero lazyload" data-bg="{{site.url}}/assets/album/background.JPG">
       <div class="hero__wrap">
         <h1 class="hero__title">Love ❤️ Travel ✈️ Money 💰</h1>
-        <p class="hero__meta">Courtney & Rob Adventure couple traveling the world while trying to make a living at the same time</p>
+        <p class="hero__meta" style="    font-size: 24px;">Courtney & Rob Adventure couple traveling the world while trying to make a living at the same time</p>
       </div>
     </div>
 
