--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,9 @@
+<style>
+  .social__link{
+    font-size: 25px;
+  }
+</style>
+
 <footer class="footer">
   <div class="container">
     <nav class="social">
