--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,10 +8,10 @@
   <div class="container">
     <nav class="social">
       {% if site.facebook_username %}
-        <a class="social__link" target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/{{ site.facebook_username }}">
-          <i class="fab fa-facebook-square"></i>
-        </a>
-      {% endif %}
+      <a class="social__link" target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/{{ site.facebook_username }}">
+        <i class="fab fa-facebook-square"></i>
+      </a>
+    {% endif %}
       {% if site.twitter_username %}
         <a class="social__link" target="_blank" rel="noopener noreferrer" href="https://www.twitter.com/{{ site.twitter_username }}">
           <i class="fab fa-twitter"></i>
@@ -27,6 +27,11 @@
         <i class="fab fa-youtube"></i>
       </a>
     {% endif %}
+    {% if site.twitch_username %}
+    <a class="social__link" target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/{{ site.twitch_username }}">
+      <i class="fab fa-twitch"></i>
+    </a>
+  {% endif %}
     </nav>
     <span>&copy; {{ site.time | date: '%Y' }} {{ site.title | escape }}. All rights reserved.</span>
   </div>
