--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,10 +18,29 @@ layout: compress
 
     {% include header.html %}
 
-    <div class="hero lazyload" data-bg="{{site.url}}/assets/album/background.JPG">
-      <div class="hero__wrap">
-        <h1 class="hero__title">Love ❤️ Travel ✈️ Money 💰</h1>
-        <p class="hero__meta" style="    font-size: 24px;">Courtney & Rob Adventure couple traveling the world while trying to make a living at the same time</p>
+    {% if page.featured-img %}
+  
+    <div class="hero lazyload" data-bg="{{site.url}}/assets/img/posts/{{page.featured-img}}.jpg">
+      {% else %}
+      <div class="hero dark-bg">
+        {% endif %}
+        <div class="hero__wrap">
+          <h1 class="hero__title">{{ page.title }}</h1>
+          <p class="hero__meta">
+              <span>
+                <time>{{ page.date | date_to_string }}</time>&nbsp;
+              </span>
+            <span>
+                {% assign words = content | number_of_words %}
+                  {% if words < 360 %}
+                    1 min
+                  {% else %}
+                    {{ words | divided_by:180 }} mins
+                {% endif %} read
+                &nbsp;
+            </span>
+          </p>
+        </div>
       </div>
     </div>
 
