--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@ layout: compress
       <div class="hero__wrap">
         <h1 class="hero__title">{{ page.title }}</h1>
         <p class="hero__meta">
-         
+          The frugal, adventure couple that’s traveling the world!
         </p>
       </div>
     </div>
