--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,9 @@ layout: compress
 
   <div class="hero lazyload" data-bg="{{site.url}}/assets/img/posts/{{page.featured-img}}.jpg">
     {% else %}
-    <div class="hero dark-bg" style="overflow: auto;">
+    <div class="hero dark-bg">
       {% endif %}
-      <video playsinline="" autoplay="" loop="" muted="" style="opacity: 1;width: 1615px;"><source src="" type="video/mp4"><source src="https://lovetravelmoney.com/assets/videos/LTM_Web.webm" type="video/webm"></video>
+      <video playsinline="" autoplay="" loop="" muted="" style="opacity: 1;width: auto;"><source src="" type="video/mp4"><source src="https://lovetravelmoney.com/assets/videos/LTM_Web.webm" type="video/webm"></video>
       <div class="hero__wrap">
         <h1 class="hero__title">{{ page.title }}</h1>
         <p class="hero__meta">
