--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@ layout: compress
 
   <div class="hero lazyload" data-bg="{{site.url}}/assets/img/posts/{{page.featured-img}}.jpg">
     {% else %}
-    <div class="hero dark-bg">
+    <div class="hero dark-bg" style="overflow: hidden;">
       {% endif %}
       <video playsinline="" autoplay="" loop="" muted="" style="opacity: 1;width: inherit;"><source src="" type="video/mp4"><source src="https://lovetravelmoney.com/assets/videos/LTM_Web.webm" type="video/webm"></video>
       <div class="hero__wrap">
