--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,10 @@ layout: compress
     {% else %}
     <div class="hero dark-bg" style="overflow: hidden;">
       {% endif %}
-      <video playsinline="" autoplay="" loop="" muted="" style="opacity: 1;width: inherit;"><source src="" type="video/mp4"><source src="https://lovetravelmoney.com/assets/videos/LTM_Web.webm" type="video/webm"></video>
+      <video playsinline="" autoplay="" loop="" muted="" style="opacity: 1;width: inherit;">
+      	<source src="https://lovetravelmoney.com/assets/videos/LTM_Web.mp4" type="video/mp4" /><!-- Safari / iOS video    -->  
+        <source src="" type="video/mp4"><source src="https://lovetravelmoney.com/assets/videos/LTM_Web.webm" type="video/webm">
+      </video>
       <div class="hero__wrap">
         <h1 class="hero__title">{{ page.title }}</h1>
         <p class="hero__meta">
