--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,6 +33,13 @@
     {% include critical.css %}
 
   </style>
+  <style>
+  .hero.is-danger.is-bold {
+    background-image: linear-gradient(141deg,#950e49,#b91d47 71%,#d51a2e);
+    background-color: #b91d47;
+  
+  }
+  </style>
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
