--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -18,7 +18,7 @@ layout: compress
 
     {% include header.html %}
 
-    <div class="hero--small">
+    <div class="hero--small hero is-danger is-bold">
       <div class="hero__wrap">
         <h1 class="hero__title">{{ page.title }}</h1>
       </div>
