--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,6 +32,11 @@
       <i class="fab fa-twitch"></i>
     </a>
   {% endif %}
+
+    <a class="social__link" target="_blank" rel="noopener noreferrer" href="mailto:courtneymakesvideo@gmail.com">
+      <i class="fab fa-mail"></i>
+    </a>
+
     </nav>
     <span>&copy; {{ site.time | date: '%Y' }} {{ site.title | escape }}. All rights reserved.</span>
   </div>
