--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,6 +1,6 @@
 
 
-<form id="contactForm" action="https://api.foform.com/forms/187721a4-8fc9-40d2-9ecb-07a60046e5f7/submissionsUrlEncoded" method="post" novalidate>
+<form id="contactForm" action="https://formspree.io/robert_gabriel@outlook.com" method="post" novalidate>
 
   <div class="form__input half">
     <label for="subject">Subject</label>
