--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: compress
 
   {% if page.featured-img %}
 
-  <div class="hero lazyload hero is-danger is-bold" data-bg="{{site.url}}/assets/img/posts/{{page.featured-img}}.jpg">
+  <div class="hero lazyload hero is-danger is-bold" data-bg="{{site.url}}/assets/album/{{page.featured-img}}">
     {% else %}
     <div class="hero dark-bg">
       {% endif %}
