--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,3 +42,11 @@
   </div>
 </footer>
 <script async src="{{ "/assets/js/bundle.js" | relative_url }}"></script>
+
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-9172518812446668",
+          enable_page_level_ads: true
+     });
+</script>
