--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,6 +21,7 @@
   <meta name="application-name" content="Love Travel Money">
   <meta name="msapplication-config" content="{{ '/assets/img/icons/browserconfig.xml?v=qA3OXqyw77' | relative_url }}">
   <meta name="theme-color" content="#ffffff">
+  <script type='text/javascript' src='//platform-api.sharethis.com/js/sharethis.js#property=5c3d32c4f8e3630010a0e39e&product=social-ab' async='async'></script>
 
   {% if site.google_tag_manager %}
 
