--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,6 +52,8 @@ layout: compress
         {{ content }}
 
       </article>
+      <div class="sharethis-inline-share-buttons"></div>
+
       <div class="post-content controls__inner">
         <div class="controls__item prev">
           {% if page.previous.url %}
