--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -31,6 +31,8 @@ layout: compress
           {{ content }}
 
         </div>
+        <div class="sharethis-inline-share-buttons"></div>
+
       </div>
 
     </main>
