--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -30,9 +30,10 @@ layout: compress
 
           {{ content }}
 
-        </div>
-        <div class="sharethis-inline-share-buttons"></div>
+          <div class="sharethis-inline-share-buttons" style="margin-top:50px;"></div>
 
+        </div>
+        
       </div>
 
     </main>
