--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -50,9 +50,9 @@ layout: compress
       <article class="post-content" itemprop="articleBody">
 
         {{ content }}
-
+<div class="sharethis-inline-share-buttons" style="margin-top:50px;"></div>
       </article>
-      <div class="sharethis-inline-share-buttons"></div>
+
 
       <div class="post-content controls__inner">
         <div class="controls__item prev">
