--- a/_includes/head.html
+++ b/_includes/head.html
@@ -40,6 +40,9 @@
     background-color: #b91d47;
   
   }
+    .hero.is-danger.is-bold.lazyloaded{
+    top: 60px;
+    }
   </style>
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
