--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,6 +43,10 @@
     .hero.is-danger.is-bold.lazyloaded{
     top: 60px;
     }
+    
+    p{    margin-top: 2rem;
+    font-size: 1.1rem;
+      margin-bottom: 2rem;}
   </style>
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
