--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,7 +44,7 @@
     top: 60px;
     }
     
-    p{    margin-top: 2rem;
+    .post-content > p {    margin-top: 2rem;
     font-size: 1.1rem;
       margin-bottom: 2rem;}
   </style>
