--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,9 +44,17 @@
     top: 60px;
     }
     
-    .post-content > p {    margin-top: 2rem;
-    font-size: 1.1rem;
-      margin-bottom: 2rem;}
+    .post-content > p {    
+      margin-top: 2rem;
+      font-size: 1.1rem;
+      margin-bottom: 2rem;
+    }
+    
+    
+    img{
+      display: block;
+      margin: auto;
+    }
   </style>
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
