--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,8 +52,8 @@
     
     
     img{
-      display: block;
-      margin: auto;
+      display: block !important;
+      margin: auto !important;
     }
   </style>
 
