--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -18,21 +18,25 @@ layout: compress
 
     {% include header.html %}
 
-
-
+    <div class="hero--small hero is-danger is-bold">
+      <div class="hero__wrap">
+        <h1 class="hero__title">{{ page.title }}</h1>
+      </div>
+    </div>
     <main class="site__content">
-      <section class="blog">
-        <div class="container">
-          <div class="post-list" itemscope="" itemtype="http://schema.org/Blog">
+
+      <div class="container">
+        <div class="page-content">
 
             {% for post in site.posts %}
               {% include card.html %}
             {% endfor %}
+          <div class="sharethis-inline-share-buttons" style="margin-top:50px;"></div>
 
-            <!-- {% include pagination.html %} -->
-          </div>
         </div>
-      </section>
+        
+      </div>
+
     </main>
 
     {% include footer.html %}
