--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -4,7 +4,10 @@ layout: compress
 <html lang="{{ page.lang | default: site.lang | default: "en_US" }}">
 
   {% include head.html %}
-
+  <style>
+    .site__content{
+    margin-top:100px;}
+  </style>
   <body class="site">
 
     {% if site.google_tag_manager %}
@@ -18,11 +21,7 @@ layout: compress
 
     {% include header.html %}
 
-    <div class="hero--small hero is-danger is-bold">
-      <div class="hero__wrap">
-        <h1 class="hero__title">{{ page.title }}</h1>
-      </div>
-    </div>
+
     <main class="site__content">
 
 <section class="blog">
