--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,9 @@
         <div class="container header__links-wrapper">
           <a class="header__link" href="{{ '/about' | relative_url }}" itemprop="url"><span itemprop="name">About Us</span></a>
           <a class="header__link" href="{{ '/blog' | relative_url }}" itemprop="url"><span itemprop="name">Blog</span></a>
+          <a class="header__link" href="{{ '/photography' | relative_url }}" itemprop="url"><span itemprop="name">Photography</span></a>
+          
+          
           <a class="header__link" href="{{ '/contact' | relative_url }}" itemprop="url">
             <span itemprop="name">Contact</span>
           </a> 
