--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     font-size: 25px;
   }
 </style>
-
+<a data-pin-do="buttonBookmark" data-pin-tall="true" href="https://www.pinterest.com/pin/create/button/"></a>
 <footer class="footer">
   <div class="container">
     <nav class="social">
