--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,6 +23,15 @@
   <meta name="theme-color" content="#ffffff">
   <script type='text/javascript' src='//platform-api.sharethis.com/js/sharethis.js#property=5c3d32c4f8e3630010a0e39e&product=social-ab' async='async'></script>
 
+<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+  
+  <style>
+    *{
+      font-family: Montserrat,sans-serif !important;
+    }
+  </style>
+
+
   {% if site.google_tag_manager %}
 
     {% include gtm.html %}
